fixed mobile location

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   <!--
   if (screen.width <= 800) {
-    window.location = "mobilehome.html";
+    window.location = "m.index.html";
   }
   //-->
 </script>
