--- a/test.html
+++ b/test.html
@@ -26,6 +26,15 @@
         <li><a href="test2.html">Cambodia</a></li>
         <li><a href="#">Maine</a></li>
         <li><a href="#">Alaska</a></li>
+        <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Example
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Subcategory 1</a></li>
+          <li><a href="#">Subcategory 2</a></li>
+          <li><a href="#">Subcategory 3</a></li>
+        </ul>
+      </li>
       </ul>
     </div>
   </div>
