--- a/test3.html
+++ b/test3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Test</title>
+  <title>Test page 2</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
@@ -42,39 +42,37 @@
   
   <div class="gallery">
   <figure class="gallery-item">
-    <a href="images/cambod.jpg"><img class="thumbnailx" src="images/cambod.jpg" width="300" height="225"></a>
+    <a href="images/6.jpg"><img class="thumbnailx" src="images/6.jpg" width="300" height="225"></a>
   </figure>
   <figure class="gallery-item">
-    <a href="images/1.jpg"><img class="thumbnailx" src="images/1.jpg" width="300" height="225"></a>
+    <a href="images/7.jpg"><img class="thumbnailx" src="images/7.jpg" width="300" height="225"></a>
   </figure>
   <figure class="gallery-item">
-    <a href="images/2.jpg"><img class="thumbnailx" src="images/2.jpg" width="300" height="225"></a>
+    <a href="images/8.jpg"><img class="thumbnailx" src="images/8.jpg" width="300" height="225"></a>
   </figure>
   <figure class="gallery-item">
-    <a href="images/3.jpg"><img class="thumbnailx" src="images/3.jpg" width="300" height="225"></a>
+    <a href="images/9.jpg"><img class="thumbnailx" src="images/9.jpg" width="300" height="225"></a>
   </figure>
   <figure class="gallery-item">
-    <a href="images/4.jpg"><img class="thumbnailx" src="images/4.jpg" width="300" height="225"></a>
+    <a href="images/10.jpg"><img class="thumbnailx" src="images/10.jpg" width="300" height="225"></a>
   </figure>
   <figure class="gallery-item">
-    <a href="images/5.jpg"><img class="thumbnailx" src="images/5.jpg" width="300" height="225"></a>
+    <a href="images/11.jpg"><img class="thumbnailx" src="images/11.jpg" width="300" height="225"></a>
   </figure>
   </div>
 
 <div class="text-center">
 <nav aria-label="...">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    <li class="page-item">
+      <a class="page-link" href="test2.html" tabindex="-1">Previous</a>
     </li>
-    <li class="page-item active">
-      <a class="page-link" href="#">1<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="page-item"><a class="page-link" href="test3.html">2</a></li>
+    <li class="page-item"><a class="page-link" href="test2.html">1</a></li>
+    <li class="page-item active"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
     <li class="page-item">
-      <a class="page-link" href="test3.html">Next</a>
+      <a class="page-link" href="#">Next</a>
     </li>
   </ul>
 </nav>
