--- a/test2.html
+++ b/test2.html
@@ -64,18 +64,12 @@
 <div class="text-center">
 <nav aria-label="...">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
-    </li>
-    <li class="page-item active">
-      <a class="page-link" href="#">1<span class="sr-only">(current)</span></a>
-    </li>
+    <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">Previous</a></li>
+    <li class="page-item active"><a class="page-link" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="test3.html">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item">
-      <a class="page-link" href="test3.html">Next</a>
-    </li>
+    <li class="page-item"><a class="page-link" href="test3.html">Next</a></li>
   </ul>
 </nav>
 </div>
