--- a/test3.html
+++ b/test3.html
@@ -64,16 +64,12 @@
 <div class="text-center">
 <nav aria-label="...">
   <ul class="pagination justify-content-center">
-    <li class="page-item">
-      <a class="page-link" href="test2.html" tabindex="-1">Previous</a>
-    </li>
+    <li class="page-item"><a class="page-link" href="test2.html" tabindex="-1">Previous</a></li>
     <li class="page-item"><a class="page-link" href="test2.html">1</a></li>
     <li class="page-item active"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
   </ul>
 </nav>
 </div>
